fix spacing issue between content and menu

--- a/css/classes/general.less
+++ b/css/classes/general.less
@@ -78,13 +78,13 @@
 }
 
 #content {
-  --content-offset: 27.5vh;
+  --content-offset: 37.5vh;
   flex: 0 0 auto;
-  margin-top: var(--content-offset);
-
   --content-width: 90vw;
 
   padding: 0.25rem 0.25rem 0.4rem 0.25rem;
+
+  padding-top: var(--content-offset);
 
   h3 {
     position: fixed;
